--- a/config/exp_cv/fixmatch_cifar100_400_0_mask0.1.yaml
+++ b/config/exp_cv/fixmatch_cifar100_400_0_mask0.1.yaml
@@ -1,10 +1,11 @@
 algorithm: fixmatch
 save_dir: ./saved_models/exp_cv/
-save_name: fixmatch_cifar100_400_0
+save_name: fixmatch_cifar100_400_0_mask0.1
 resume: True
-load_path: ./saved_models/usb_cv//fixmatch_cifar100_400_0/latest_model.pth
+load_path: ./saved_models/usb_cv//fixmatch_cifar100_400_0_mask0.1/latest_model.pth
 overwrite: True
 use_tensorboard: True
+exp_type: mask
 epoch: 200
 num_train_iter: 204800
 num_log_iter: 512
@@ -16,6 +17,7 @@ num_labels: 400
 uratio: 1
 ema_m: 0.0
 hard_label: True
+mask_ratio: 0.1
 T: 0.5
 p_cutoff: 0.95
 ulb_loss_ratio: 1.0
